fixes margin issue on mobile navbar

--- a/src/scss/layout/_navigation.scss
+++ b/src/scss/layout/_navigation.scss
@@ -2,9 +2,11 @@
   display: flex;
   position: relative;
 
+  align-items: center;
+
   &__label {
     font-size: 3rem;
-    margin-right: 5rem;
+    margin-right: 2rem;
     cursor: pointer;
     display: none;
 
@@ -33,7 +35,7 @@
       flex-direction: column;
       position: absolute;
       top: 6.5rem;
-      left: -12rem;
+      left: -13rem;
       border: 1px solid lighten($color-grey, 30%);
     }
   }
